tooling/nargo_cli/tests/snapshots/execution_failure/mod_by_zero_witness_signed/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed: attempt to calculate the remainder with a divisor of zero
  ┌─ src/main.nr:2:5
  │
2 │     a % b
  │     -----
  │
  = Call stack:
    1: main
            at src/main.nr:2:5

Failed assertion
